test/compile_errors/err_compiler_tool_capability_struct_literal.w
//! expect-error: tool capability 'Diagnostics' can only be constructed by the compiler driver

use std.compiler

fn main:
    let _diagnostics = Diagnostics { token: "", output_path: "" }
